manifests/test/harbor/apps_v1_deployment_harbor-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: registry
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: registry
    app.kubernetes.io/part-of: harbor
  name: harbor-registry
  namespace: harbor
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: registry
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: registry
      app.kubernetes.io/part-of: harbor
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/component: registry
        app.kubernetes.io/instance: harbor
        app.kubernetes.io/name: registry
        app.kubernetes.io/part-of: harbor
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: registry
                app.kubernetes.io/instance: harbor
                app.kubernetes.io/name: registry
                app.kubernetes.io/part-of: harbor
            topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
      - envFrom:
        - secretRef:
            name: harbor-registry-c6gdbhk88m
        image: ghcr.io/goharbor/registry-photon:v2.15.1@sha256:ebf0325c2661729dbb317cbf839608eb8b15cfa158911a94976f2c21563c466e
        livenessProbe:
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 10
        name: registry
        ports:
        - containerPort: 5000
        - containerPort: 5001
        readinessProbe:
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /storage
          name: data
        - mountPath: /etc/registry/passwd
          name: passwd
          subPath: passwd
        - mountPath: /etc/registry/config.yml
          name: config
          subPath: config.yml
      - env:
        - name: CORE_SECRET
          valueFrom:
            secretKeyRef:
              key: CORE_SECRET
              name: harbor-core-c2c282484m
        - name: JOBSERVICE_SECRET
          valueFrom:
            secretKeyRef:
              key: JOBSERVICE_SECRET
              name: harbor-jobservice-hghdcm6gcd
        envFrom:
        - secretRef:
            name: harbor-registry-c6gdbhk88m
        image: ghcr.io/goharbor/harbor-registryctl:v2.15.2@sha256:223d5cb49d5dbf0ba4ae022e7dd9775fa459904112dc12084d3aaa36c1408362
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 10
        name: registryctl
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /storage
          name: data
        - mountPath: /etc/registry/config.yml
          name: config
          subPath: config.yml
        - mountPath: /etc/registryctl/config.yml
          name: config
          subPath: ctl-config.yml
      securityContext:
        fsGroup: 10000
        fsGroupChangePolicy: OnRootMismatch
        runAsUser: 10000
      terminationGracePeriodSeconds: 120
      volumes:
      - name: passwd
        secret:
          items:
          - key: passwd
            path: passwd
          secretName: harbor-registry-passwd-67tg6m2cc6
      - configMap:
          name: harbor-registry-conf-t9567td9kg
        name: config
      - name: data
        persistentVolumeClaim:
          claimName: harbor-registry-data
