manifests/test/harbor/apps_v1_statefulset_harbor-trivy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: trivy
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: trivy
    app.kubernetes.io/part-of: harbor
  name: harbor-trivy
  namespace: harbor
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: trivy
      app.kubernetes.io/part-of: harbor
  serviceName: harbor-trivy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trivy
        app.kubernetes.io/instance: harbor
        app.kubernetes.io/name: trivy
        app.kubernetes.io/part-of: harbor
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: trivy
                app.kubernetes.io/instance: harbor
                app.kubernetes.io/name: trivy
                app.kubernetes.io/part-of: harbor
            topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
      - envFrom:
        - configMapRef:
            name: harbor-trivy-6gd2797t2c
        image: ghcr.io/goharbor/trivy-adapter-photon:v2.14.1@sha256:13dddb2adef7e28530e04e5659c49f550e5463e5f2536378ffd9207f7b23aac4
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /probe/healthy
            port: api-server
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
        name: trivy
        ports:
        - containerPort: 8080
          name: api-server
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /probe/ready
            port: api-server
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /home/scanner/.cache
          name: data
          readOnly: false
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 50%
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      labels:
        app.kubernetes.io/component: trivy
        app.kubernetes.io/instance: harbor
        app.kubernetes.io/name: trivy
        app.kubernetes.io/part-of: harbor
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: ssd-r1
