manifests/test/harbor/gateway.networking.k8s.io_v1_gateway_harbor.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
    cert-manager.io/cluster-issuer: cluster-ca
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: harbor
  name: harbor
  namespace: harbor
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.60
  listeners:
  - hostname: harbor.10.5.0.60.nip.io
    name: harbor
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: harbor-gateway-tls
      mode: Terminate
