manifests/test/harbor/kyverno.io_v1_policy_harbor-redis-sentinel.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: harbor
  name: harbor-redis-sentinel
  namespace: harbor
spec:
  rules:
  - match:
      resources:
        kinds:
        - Deployment
        selector:
          matchLabels:
            app.kubernetes.io/component: sentinel
    mutate:
      patchStrategicMerge:
        spec:
          strategy:
            rollingUpdate:
              maxUnavailable: 50%
    name: set-sentinel-rolling-strategy
