manifests/test/harbor/v1_namespace_harbor.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/part-of: harbor
  name: harbor
