manifests/test/harbor/v1_service_harbor-jobservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: jobservice
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: jobservice
    app.kubernetes.io/part-of: harbor
  name: harbor-jobservice
  namespace: harbor
spec:
  ports:
  - name: http-jobservice
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/component: jobservice
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: jobservice
    app.kubernetes.io/part-of: harbor
